--- a/index.html
+++ b/index.html
@@ -196,7 +196,13 @@
 
     <!-- footer -->
     <footer>
-        <p>Sample Project by Vaibhav K. Bhandare</p>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
     </footer>
     <script src="./js/index.js"></script>
 </body>
